virtualSvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canaryvirtualservice
spec:
  hosts:
  - "*"
  gateways:
  - canarygateway
  http:
  - route:
    - destination:
        host: canary
        subset: beta
      weight: 90
    - destination:
        host: canary
        subset: alpha
      weight: 10
